--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -14,7 +14,7 @@ log4j.appender.CONSOLA.additivity=false
 
 # Configuracion del log
 log4j.appender.LOG=org.apache.log4j.RollingFileAppender
-log4j.appender.LOG.File=logs/CPv2.log
+log4j.appender.LOG.File=logs/ExamplePOI.log
 log4j.appender.LOG.MaxFileSize=50MB
 log4j.appender.LOG.MaxBackupIndex=5
 log4j.appender.LOG.layout=org.apache.log4j.PatternLayout
